--- a/main.html
+++ b/main.html
@@ -17,8 +17,12 @@
 		<input type="radio" name="gender" id="gender_m" required>
 		<input type="radio" name="gender" id="gender_f" required><br><br>
 		<label for="car-brands">Car Brands</label>
-		<input type="select" name="car-brands" id="cars" placeholder="--Please choose an option--" required><br><br>
-
+		<select name="car-brands" id="cars" placeholder="--Please choose an option--" required><br><br>
+		  <option value="volvo">Volvo</option>
+		  <option value="mahindra">Mahindra</option>
+		  <option value="mercedes">Mercedes</option>
+		  <option value="audi">Audi</option>
+		</select>
 		<label for="age">Age</label>
 		<input type="number" id="age" placeholder="Age" required><br><br>
 		<label for="dob">DOB</label>
