--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 		<label for="name">Name</label>
-		<input type="text" class="name" id="name" minlength="3" maxlength="18" placeholder="Name" required><br><br>
+		<input type="text" name="name" id="name" minlength="3" maxlength="18" placeholder="Name" required><br><br>
 		<label for="email">Email</label>
-		<input type="email" class="email id="email" placeholder="Email" required><br><br>
+		<input type="email" name="email id="email" placeholder="Email" required><br><br>
 		<label for="gender">Gender</label>
 		<input type="radio" name="gender" id="gender_m" required>
 		<input type="radio" name="gender" id="gender_f" required><br><br>
