--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 		<label for="name">Name</label>
 		<input type="text" name="name" id="name" minlength="3" maxlength="18" placeholder="Name" required><br><br>
 		<label for="email">Email</label>
-		<input type="email" name="email id="email" placeholder="Email" required><br><br>
+		<input type="email" name="email" id="email" placeholder="Email" required><br><br>
 		<label for="gender">Gender</label>
 		<input type="radio" name="gender" id="gender_m" required>
 		<input type="radio" name="gender" id="gender_f" required><br><br>
-		<label for="car-brands">Car Brands</label>
-		<select name="car-brands" id="cars" placeholder="--Please choose an option--" required><br><br>
+		<label for="cars">Car Brands</label>
+		<select name="cars" id="cars" placeholder="--Please choose an option--" required><br><br>
 		  <option value="volvo">Volvo</option>
 		  <option value="mahindra">Mahindra</option>
 		  <option value="mercedes">Mercedes</option>
